# xcav-parachain

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  keys_1.md  node1_logs.md  para-4284-genesis-state  para-4284-wasm  para-4285-genesis-state.txt  para-4285-wasm.txt  para-4323-genesis-state.txt  para-4323-wasm.txt  plain-parachain-chainspec.json  raw-parachain-chainspec.json
docs/: rust-setup.md
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/community-loan-pool/: Cargo.toml
pallets/community-loan-pool/src/: lib.rs
pallets/motion/: Cargo.toml
pallets/motion/src/: mock.rs  tests.rs
pallets/xcavate-staking/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: lib.rs
runtime/devnet/: Cargo.toml
runtime/devnet/src/: contracts.rs  lib.rs  voter_bags.rs  xcm_config.rs
runtime/mainnet/: Cargo.toml
runtime/mainnet/src/: lib.rs  xcm_config.rs
